DOMjudge Programming Contest Judging System

Version 3.1.3 - SVN
-------------------

Version 3.1.2 - 27 October 2010
-------------------------------
 - Fix missing permissions for plugin interface SQL user.
 - Fix information leak in clarification problems list. (Closes: #3096018)
 - Small documentation improvements.
 - Do not check scoreboard cache for key integrity; this
   prevents deletion of teams while adding no real value.
 - In JS problem name detection, probid needs to be casenormalised too.

Version 3.1.1 - 22 August 2010
------------------------------
 - Update upstream autoconf macro's fixing multiple small bugs.
 - Fix autoconf checks for libcURL and static linking.
 - Fix Makefile rules for building library objects and for
   (re)generating configure script.
 - Workaround sorttable colspan bug and use stable sorting.
 - Small documentation fixes.
 - Fix expected output for reboot test-source.
 - Don't shorten a team's hostname if it is an IP address.
 - Add unique index on language extension, required for compile scripts.
 - Remove literate Haskell test-source: doesn't compile without extension.

Version 3.1.0 - 14 July 2010
----------------------------
 - Add multiple testcases support.
 - Add PHP session support as alternative to IP address authentication.
   Based on patches by Tobias Werth.
 - Bugfixes and improvements to checktestdata program.
 - Fix error trapping in subshells, thanks Jan Jergus. (Closes: #2866430)
 - Fix bug in lib.database.php with array_map "class::method" notation.
 - Add 'enabled' field to contest to allow for easier editing.
 - Only show the configured submission methods in the team manual.
 - Fix install of gendbpasswords and use /dev/urandom.
 - Add documentation on static_scoreboard.
 - Add problem subject to clarifications, idea from DomJudge@FAU.
 - Add WHILE command and tests to checktestdata syntax.
 - Move PENALTY_TIME variable out of common-config into domserver-config.